Chapter 05/daemonset.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: example-daemonset
  namespace: default
spec:
  selector:
    matchLabels:
      name: example
  template:
    metadata:
      labels:
        name: example
    spec:
      containers:
        - name: example
          image: nginx:latest
          ports:
            - containerPort: 80
